@@ -88,6 +88,8 @@ version ?.??.?? (????-??-??):
   - show selected position on map for network device and node current coordinates
     presentaion [chilan]
   - allow to select company/division for mass invoice printing [chilan]
+  - defined html class multi-check which allows tbodies function with multi
+    select elements on lists [chilan]
 
 version 1.11.20 (2016-04-19):
 
